--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     <p class="paragraph">
                         Não possui uma conta?
                         <a href="./createAccount.html" target="_blank"
-                            >Crie uma aqui!</a
+                            >Crie aqui!</a
                         >
                     </p>
                 </section>
