--- a/index.html
+++ b/index.html
@@ -15,26 +15,26 @@
     <body>
         <main>
             <div class="container">
-                <section id="login">
-                    <h1>
-                        Bem Vindo ao<br />
-                        NoteSoftware!
-                    </h1>
-                    <input type="text" placeholder="E-mail" />
-                    <input
-                        type="password"
-                        placeholder="Senha
-                    "
-                    />
-                    <br />
-                    <button class="btn">Entrar</button>
-                    <p class="paragraph">
-                        Não possui uma conta?
-                        <a href="./createAccount.html" target="_blank"
-                            >Crie aqui!</a
-                        >
-                    </p>
-                </section>
+                <form id="login">
+                    <section>
+                        <h1>
+                            Bem Vindo ao<br />
+                            NoteSoftware!
+                        </h1>
+                        <input type="text" placeholder="E-mail" />
+                        <input
+                            type="password"
+                            placeholder="Senha
+                            "
+                        />
+                        <br />
+                        <button class="btn">Entrar</button>
+                        <p class="paragraph">
+                            Não possui uma conta?
+                            <a href="./createAccount.html">Crie aqui!</a>
+                        </p>
+                    </section>
+                </form>
             </div>
         </main>
         <footer class="footer">
