--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                     <button class="btn">Entrar</button>
                     <p class="paragraph">
                         Não possui uma conta?
-                        <a href="./createAccount.html">Crie aqui!</a>
+                        <a href="./createAccount.html" class="register"><span>Cadastre-se</span></a>
                     </p>
                 </form>
             </div>
