--- a/note.html
+++ b/note.html
@@ -4,6 +4,12 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link
+            href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
+            rel="stylesheet"
+            integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx"
+            crossorigin="anonymous"
+        />
         <link rel="stylesheet" href="./public/css/note.css" />
         <link
             rel="shortcut icon"
@@ -14,16 +20,56 @@
     </head>
     <body>
         <main>
-            <div class="container">
-                <form id="recados">
+            <form id="recados">
+                <fieldset class="title-fields">
                     <h1>Meus recados!</h1>
-                    <input type="text" />
-                </form>
-            </div>
+                </fieldset>
+                <fieldset class="title-fields">
+                    <input
+                        id="iptText"
+                        class="dsc"
+                        type="text"
+                        placeholder="Descrição"
+                    />
+                    <input
+                        id="iptDetail"
+                        class="detail"
+                        type="text"
+                        placeholder="Detalhamento"
+                    />
+                    <button class="btn" onclick="addNewNote()">Salvar</button>
+                </fieldset>
+            </form>
+            <table class="table table-hover">
+                <thead>
+                    <tr>
+                        <th scope="col">#</th>
+                        <th scope="col">Descrição</th>
+                        <th scope="col">Detalhamento</th>
+                        <th scope="col">Ação</th>
+                    </tr>
+                </thead>
+                <tbody id="forms"></tbody>
+            </table>
+            <!-- <table class="thead-title">
+                <thead>
+                    <tr>
+                        <th class="title-note" colspan="4">Últimos recados!</th>
+                    </tr>
+                    <tr>
+                        <th>#</th>
+                        <th>Descrição</th>
+                        <th>Detalhamento</th>
+                        <th>Ação</th>
+                    </tr>
+                </thead>
+                <tbody></tbody>
+            </table> -->
         </main>
         <footer class="footer">
             Criação e Desenvolvimento:
             <a href="mailto:silva11.cassiano@gmail.com">Cassiano Silva</a>
         </footer>
+        <script src="./public/js/note.js"></script>
     </body>
 </html>
