--- a/note.html
+++ b/note.html
@@ -37,7 +37,7 @@
                         type="text"
                         placeholder="Detalhamento"
                     />
-                    <button class="btn" onclick="addNewNote()">Salvar</button>
+                    <button class="btn" id="save-btn">Salvar</button>
                 </fieldset>
             </form>
             <table class="table table-hover">
@@ -51,25 +51,8 @@
                 </thead>
                 <tbody id="forms"></tbody>
             </table>
-            <!-- <table class="thead-title">
-                <thead>
-                    <tr>
-                        <th class="title-note" colspan="4">Últimos recados!</th>
-                    </tr>
-                    <tr>
-                        <th>#</th>
-                        <th>Descrição</th>
-                        <th>Detalhamento</th>
-                        <th>Ação</th>
-                    </tr>
-                </thead>
-                <tbody></tbody>
-            </table> -->
         </main>
-        <footer class="footer">
-            Criação e Desenvolvimento:
-            <a href="mailto:silva11.cassiano@gmail.com">Cassiano Silva</a>
-        </footer>
-        <script src="./public/js/note.js"></script>
+
+        <script src="public/js/note.js"></script>
     </body>
 </html>
