--- a/createAccount.html
+++ b/createAccount.html
@@ -22,7 +22,7 @@
                         id="iptEmail"
                         type="email"
                         name="email"
-                        placeholder="Insira aqui o seu email."
+                        placeholder="Exemplo@gmail.com"
                         required
                     />
                     <label class="text-label" for="iptPassword">Senha: </label>
