--- a/note.html
+++ b/note.html
@@ -37,7 +37,12 @@
                         type="text"
                         placeholder="Detalhamento"
                     />
-                    <button class="btn" id="save-btn">Salvar</button>
+                    <input
+                        type="submit"
+                        class="btn"
+                        id="save-btn"
+                        value="Salvar"
+                    />
                 </fieldset>
             </form>
             <table class="table table-hover">
