--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
                         name="password"
                         placeholder="Insira aqui a sua senha."
                         required
+                        autocomplete="current-password"
                     />
                     <div id="checkbox">
                         <input
