--- a/note.html
+++ b/note.html
@@ -10,6 +10,11 @@
             integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx"
             crossorigin="anonymous"
         />
+        <script
+            src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
+            crossorigin="anonymous"
+        ></script>
         <link rel="stylesheet" href="./public/css/note.css" />
         <link
             rel="shortcut icon"
@@ -39,7 +44,7 @@
                     />
                     <input
                         type="submit"
-                        class="btn"
+                        class="btn btn-outline-dark"
                         id="save-btn"
                         value="Salvar"
                     />
@@ -54,9 +59,7 @@
                         <th scope="col">Ação</th>
                     </tr>
                 </thead>
-                <tbody id="forms">
-                    
-                </tbody>
+                <tbody id="forms"></tbody>
             </table>
         </main>
         <script src="public/js/note.js"></script>
