--- a/createAccount.html
+++ b/createAccount.html
@@ -60,6 +60,6 @@
             Criação e Desenvolvimento:
             <a href="mailto:silva11.cassiano@gmail.com">Cassiano Silva</a>
         </footer>
-        <script src="./public/js/index.js"></script>
+        <script src="./public/js/createAccount.js"></script>
     </body>
 </html>
