--- a/index.html
+++ b/index.html
@@ -68,6 +68,6 @@
             Criação e Desenvolvimento:
             <a href="mailto:silva11.cassiano@gmail.com">Cassiano Silva</a>
         </footer>
-        <script src="./public/js/login.js"></script>
+        <script src="./public/js/index.js"></script>
     </body>
 </html>
