--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
                         name="email"
                         placeholder="Insira aqui o seu email."
                         required
+                        autocomplete="email"
                     />
                     <label class="text-label" for="iptPassword">Senha:</label>
                     <input
