--- a/note.html
+++ b/note.html
@@ -35,12 +35,14 @@
                         class="dsc"
                         type="text"
                         placeholder="Descrição"
+                        required
                     />
                     <input
                         id="iptDetail"
                         class="detail"
                         type="text"
                         placeholder="Detalhamento"
+                        required
                     />
                     <input
                         type="submit"
