--- a/index.html
+++ b/index.html
@@ -27,7 +27,6 @@
                         name="email"
                         placeholder="Insira aqui o seu email."
                         required
-                        autocomplete="email"
                     />
                     <label class="text-label" for="iptPassword">Senha:</label>
                     <input
@@ -36,7 +35,6 @@
                         name="password"
                         placeholder="Insira aqui a sua senha."
                         required
-                        autocomplete="current-password"
                     />
                     <div id="checkbox">
                         <input
@@ -67,7 +65,7 @@
         </main>
         <footer class="footer">
             Criação e Desenvolvimento:
-            <a href="mailto:silva11.cassiano@gmail.com">Cassiano Silva</a>
+            <a href="mailto:silva11.cassiano@gmail.com">Cassiano Silva.</a>
         </footer>
         <script src="./public/js/index.js"></script>
     </body>
