--- a/note.html
+++ b/note.html
@@ -21,12 +21,20 @@
             href="./public/assets/favicon/dev.ico"
             type="image/x-icon"
         />
+        <link
+            rel="stylesheet"
+            href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
+        />
         <title>NoteSoftware - Meus recados</title>
     </head>
     <body>
         <main>
             <fieldset class="title-fields">
                 <h1>Meus recados!</h1>
+                <span id="btnLog" class="material-symbols-outlined">
+                    logout
+                </span>
+                <span class="logout-paragraph">Sair</span>
             </fieldset>
             <form id="recados">
                 <fieldset class="title-fields">
