--- a/createAccount.html
+++ b/createAccount.html
@@ -58,7 +58,7 @@
         </main>
         <footer class="footer">
             Criação e Desenvolvimento:
-            <a href="mailto:silva11.cassiano@gmail.com">Cassiano Silva</a>
+            <a href="mailto:silva11.cassiano@gmail.com">Cassiano Silva.</a>
         </footer>
         <script src="./public/js/createAccount.js"></script>
     </body>
